bk_ida/libquantumida/g2/quantum_delete_matrix
gates.c:365:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:543:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
matrix.c:539:1: error: use of undeclared identifier 'mem_1'
mem_1 -= 8 * m->rows * ( __int64)m->cols; 
^
matrix.c:540:6: error: use of undeclared identifier 'mem_1'
if ( mem_1 > max_0 ) 
     ^
matrix.c:540:14: error: use of undeclared identifier 'max_0'
if ( mem_1 > max_0 ) 
             ^
matrix.c:541:1: error: use of undeclared identifier 'max_0'
max_0 = mem_1; 
^
matrix.c:541:9: error: use of undeclared identifier 'mem_1'
max_0 = mem_1; 
        ^
5 errors generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
